syntax = "proto3";
package cosmos_sdk.v1;

import "third_party/proto/gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/types";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = false;

// Coin defines a token with a denomination and an amount.
//
// NOTE: The amount field is an Int which implements the custom method
// signatures required by gogoproto.
message Coin {
  string denom = 1;
  string amount = 2 [ (gogoproto.customtype) = "Int", (gogoproto.nullable) = false ];
}

// DecCoin defines a token with a denomination and a decimal amount.
//
// NOTE: The amount field is an Dec which implements the custom method
// signatures required by gogoproto.
message DecCoin {
  string denom = 1;
  string amount = 2 [ (gogoproto.customtype) = "Dec", (gogoproto.nullable) = false ];
}

// PublicKey defines a type to represent raw public key bytes.
message PublicKey {
  option (gogoproto.equal) = true;
  option (gogoproto.stringer) = true;

  oneof pub {
    bytes ed25519 = 1;
    bytes secp256k1 = 2;
    bytes sr25519 = 3;
  }
}